UPDATE: CLO-5865 - Switch from Cobertura to JaCoCo - use parametrized target runtests-engine instead of separate target + remove some old cobertura stuff.
git-svn-id: https://svn.javlin.eu/svn/cloveretl.opensource/trunk-4-1@17315 a09ad3ba-1a0f-0410-b1b9-c67202f10d70